# Latent-Dirac

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  ONBOARDING.md  README.md  TASK-SPLIT.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assets/demos/: annihilation_endpoint_3d.html  antiproton_ledger_3d.html  charge_sign_splitter_3d.html  decay_emission_3d.html  dipole_quad_line_3d.html  elena_ring_3d.html  positron_capture_3d.html  scene_tour_3d.html  target_production_3d.html  target_production_engine_3d.html  wien_filter_3d.html
desktop/: .gitignore  README.md  main.js  package-lock.json  package.json  preload.js
desktop/packaging/: README.md  build_engine.sh  engine.spec  engine_entry.py
desktop/renderer/: index.html  panels.js  renderer.js  splitters.js  styles.css
desktop/src/: ai.js  config.js  errors.js  orchestrator.js  scene_file.js  sidecar.js
desktop/test/: ai.test.js  config.test.js  orchestrator.test.js  panels.test.js  scene_file.test.js  sidecar.test.js  splitters.test.js
docs/: architecture.md  benchmarks.md  index.md  license_strategy.md  physics_scope.md  positron_cross_section_sources.md  rendering.md  roadmap.md  safety_scope.md  scene_schema.md  solver_backends.md  source_models.md  validation_plan.md
docs/superpowers/plans/: 2026-07-03-magnetic-control-sweep.md
docs/superpowers/specs/: 2026-07-03-magnetic-control-sweep-design.md  2026-07-04-field-model-library-design.md  2026-07-05-batched-trajectories-design.md  (+41 more)
engine/: README.md
engine/positrongen/: CMakeLists.txt  positrongen.cc
engine/transformer/: CMakeLists.txt  transformer.cc
engine/yieldgen/: CMakeLists.txt  yieldgen.cc
examples/: antiproton_ledger_demo.py  antiproton_transport_demo.py  charge_sign_splitter_demo.py  magnetic_control_sweep_demo.py  magnetic_mirror_demo.py  positron_capture_demo.py  scene_report.py  scene_tour_demo.py  wien_filter_demo.py
examples/data/: elena_like_ring.json  pbar_yield_ftfp_bert_26gevc_ir.csv  positron_yield_ftfp_bert_10mev_w.csv
examples/scenes/: annihilation_endpoint.yaml  antiproton_ledger.yaml  batched_sweep.yaml  buffer_gas_cf4_cooling.yaml  buffer_gas_table_cooling.yaml  decay_emission.yaml  decel_capture.yaml  dipole_quad_line.yaml  elena_handoff.yaml  elena_ring.yaml  hello_beamline.yaml  positron_capture.yaml  rotating_wall_drive.yaml  rotating_wall_in_trap.yaml  scene_tour.yaml  target_production.yaml  target_production_engine.yaml  trap_storage_lifecycle.yaml  wien_filter.yaml
latent_dirac/: __init__.py  cli.py
latent_dirac/adapters/: __init__.py
latent_dirac/backends/: __init__.py  differentiable.py  evaluator.py  jax_scene.py  pytree_state.py
latent_dirac/beamline/: __init__.py  aperture.py  element.py  momentum_window.py
latent_dirac/bridge/: __init__.py  __main__.py  handler.py
latent_dirac/collisions/: __init__.py  cross_sections.py  operator.py
latent_dirac/core/: __init__.py  constants.py  random.py  species.py  units.py
latent_dirac/diagnostics/: __init__.py  accepted_yield.py  loss_ledger.py  reports.py  scene_report.py  spectra.py
latent_dirac/fields/: __init__.py  base.py  composite.py  dipole.py  field_map.py  penning_trap.py  quadrupole.py  rotating_wall.py  solenoid.py  space_charge.py  time_gated.py  uniform.py
latent_dirac/io/: __init__.py  hdf5_io.py  openpmd_io.py  parquet_io.py  root_io.py
latent_dirac/pipeline/: __init__.py  loss_accounting.py  runner.py  stage.py
latent_dirac/scene/: __init__.py  build.py  loader.py  schema.py
latent_dirac/server/: __init__.py  __main__.py  app.py
latent_dirac/solvers/: __init__.py  base.py  kernels.py  relativistic_boris.py
latent_dirac/sources/: __init__.py  antiproton_surrogate.py  antiproton_table.py  base.py  cold_sphere.py  positron_beta.py  positron_pair.py  positron_table.py
latent_dirac/state/: __init__.py  particle_cloud.py  particle_state.py  result.py  trajectory.py
latent_dirac/viz/: __init__.py  base.py  field_3d.py  field_lines.py  matplotlib_backend.py  plotly_backend.py  scene_3d.py
services/ai_gateway/: README.md  __init__.py  app.py  requirements.txt  test_app.py
tests/: test_accepted_yield.py  test_annihilation_plate.py  test_annihilation_visuals.py  test_antiproton_surrogate_source.py  test_antiproton_table_source.py  test_apparatus_glyphs.py  test_batched_trajectories.py  test_benchmark_tool.py  test_beta_plus_source.py  test_boris_kernel.py  test_bridge.py  test_buffer_gas_cooling.py  test_buffer_gas_operator.py  test_buffer_gas_table_mode.py  test_charge_sign_splitter_demo.py  test_cli.py  test_composite_field.py  test_cross_sections.py  test_demo_field_status.py  test_demo_scenes.py  test_demo_webp_assets.py  test_differentiable_objective.py  test_elena_handoff_demo.py  test_elena_ring_demo.py  test_field_lines.py  test_field_map.py  test_field_map_cst.py  test_field_model_library.py  test_geant4_matter_adapter.py  test_gpu_float32_validation.py  test_jax_backend.py  test_larmor_radius.py  test_loss_ledger.py  test_magnetic_control_sweep_demo.py  test_matter_slab_scene.py  test_openpmd_output.py  test_particle_cloud.py  test_particle_state.py  test_penning_trap.py  test_pipeline_losses.py  (+24 more)
tools/: __init__.py  generate_demo_webp.py  generate_hero_3d_webp.py  generate_scene_demo_webps.py  make_elena_like_line.py  mpl3d.py  run_benchmarks.py
(+10 files in other folders)
