[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latent-dirac"
version = "0.1.0"
description = "Open source-to-acceptance simulation skeleton for positron and antiproton studies."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Latent Dirac contributors" }
]
dependencies = [
  "numpy>=1.26",
  "pydantic>=2.7",
  "pyyaml>=6.0"
]

[project.scripts]
latent-dirac = "latent_dirac.cli:main"

[project.urls]
Homepage = "https://github.com/ClawG0d/Latent-Dirac"
Documentation = "https://github.com/ClawG0d/Latent-Dirac/tree/master/docs"
Issues = "https://github.com/ClawG0d/Latent-Dirac/issues"
Changelog = "https://github.com/ClawG0d/Latent-Dirac/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4"
]
viz = [
  "matplotlib",
  "pillow",
  "plotly"
]
jax = [
  "jax>=0.4.30"
]
openpmd = [
  "openpmd-api>=0.15"
]
root = [
  "uproot>=5"
]

[tool.setuptools.packages.find]
include = ["latent_dirac*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 110
target-version = "py310"
# The vendored Geant4 tree is read-only upstream code and is never linted.
extend-exclude = ["geant4-v11.4.2"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
# tools and examples insert the project root into sys.path before importing
# the package, and report/drawing literals are kept verbatim on long lines
"tools/*" = ["E402", "E501"]
"examples/*" = ["E402", "E501"]
